[gd_scene load_steps=12 format=3 uid="uid://ck268fp1u1q3d"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_lqjeu"]
[ext_resource type="Texture2D" uid="uid://cpk3n6hl4e5ge" path="res://Assets/menu/1000215879.jpg" id="1_ohthj"]
[ext_resource type="Texture2D" uid="uid://dr8g3hfxq1kr2" path="res://Assets/Level0/email (2).png" id="2_pqde5"]
[ext_resource type="Texture2D" uid="uid://dxa8tbr0gr10h" path="res://Assets/Level0/email (1).png" id="3_7yyxo"]
[ext_resource type="Texture2D" uid="uid://ddoa5eyh2h2no" path="res://Assets/menu/mensagem.png" id="5_kmfp2"]
[ext_resource type="Texture2D" uid="uid://j3m2atclah1u" path="res://Assets/menu/logo.png" id="6_fy67g"]
[ext_resource type="Texture2D" uid="uid://ykkv5rxt1cvo" path="res://Assets/menu/butao.png" id="7_k2x78"]
[ext_resource type="Texture2D" uid="uid://c5fpo0vsr8pfs" path="res://Assets/menu/butaoescuro.png" id="8_juno0"]
[ext_resource type="FontFile" uid="uid://b3w75txnn4iqb" path="res://Assets/Fontes/String Round.otf" id="8_s20ko"]
[ext_resource type="FontFile" uid="uid://cnkwlpkp3e1mt" path="res://Assets/Fontes/hellogoodoldstyle-Regular dafont.ttf" id="9_fnmni"]

[sub_resource type="Theme" id="Theme_dv1r0"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_lqjeu")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(642, 360)
scale = Vector2(1.004, 1)
texture = ExtResource("1_ohthj")

[node name="Logo2" type="Sprite2D" parent="."]
position = Vector2(435, 150)
scale = Vector2(0.15433, 0.144265)
texture = ExtResource("6_fy67g")

[node name="Neurocorp2" type="Label" parent="."]
offset_left = 485.0
offset_top = 133.0
offset_right = 738.0
offset_bottom = 193.0
theme = SubResource("Theme_dv1r0")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_fnmni")
theme_override_font_sizes/font_size = 60
text = "NeuroCorp"

[node name="Button" type="TextureButton" parent="."]
offset_left = 383.0
offset_top = 192.0
offset_right = 749.0
offset_bottom = 389.0
texture_normal = ExtResource("2_pqde5")
texture_pressed = ExtResource("3_7yyxo")
texture_hover = ExtResource("3_7yyxo")
ignore_texture_size = true
stretch_mode = 0

[node name="email" type="Node2D" parent="."]
visible = false

[node name="Mensagem" type="Sprite2D" parent="email"]
position = Vector2(660, 376)
texture = ExtResource("5_kmfp2")

[node name="Logo" type="Sprite2D" parent="email"]
position = Vector2(213, 583)
scale = Vector2(0.15, 0.15)
texture = ExtResource("6_fy67g")
centered = false

[node name="aceitar" type="TextureButton" parent="email"]
offset_left = 331.0
offset_top = 461.0
offset_right = 544.0
offset_bottom = 546.0
texture_normal = ExtResource("7_k2x78")
texture_hover = ExtResource("8_juno0")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="email/aceitar"]
layout_mode = 0
offset_left = 44.0
offset_top = 14.0
offset_right = 164.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_s20ko")
theme_override_font_sizes/font_size = 50
text = "Aceitar"

[node name="sair" type="TextureButton" parent="email"]
offset_left = 672.0
offset_top = 462.0
offset_right = 887.0
offset_bottom = 548.0
texture_normal = ExtResource("7_k2x78")
texture_hover = ExtResource("8_juno0")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="email/sair"]
layout_mode = 0
offset_left = 43.0
offset_top = 14.0
offset_right = 185.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_s20ko")
theme_override_font_sizes/font_size = 50
text = "Recusar"

[node name="texto" type="Label" parent="email"]
offset_left = 216.0
offset_top = 173.0
offset_right = 1030.0
offset_bottom = 426.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_s20ko")
theme_override_font_sizes/font_size = 55
text = "			Você foi escolhido para a iniciação de 
novos funcionários! 
Após a aceitação compareça na empresa 
às 7:00!"

[node name="titulo email" type="Label" parent="email"]
offset_left = 217.0
offset_top = 53.0
offset_right = 611.0
offset_bottom = 153.0
theme = SubResource("Theme_dv1r0")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_fnmni")
theme_override_font_sizes/font_size = 60
text = "NeuroCorp"

[node name="Neurocorp" type="Label" parent="email"]
offset_left = 324.0
offset_top = 604.0
offset_right = 718.0
offset_bottom = 704.0
theme = SubResource("Theme_dv1r0")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_fnmni")
theme_override_font_sizes/font_size = 60
text = "NeuroCorp"

[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="pressed" from="email/aceitar" to="." method="_on_aceitar_pressed"]
[connection signal="button_up" from="email/sair" to="." method="_on_sair_button_up"]
